mockup/css/style.css
@import url(https://fonts.googleapis.com/css?family=Noto+Sans);
@import url(https://fonts.googleapis.com/css?family=Gentium+Basic);

body {
  font-family: "Source Han Sans TC", "Noto Sans", Helvetica, Arial, sans-serif;
  background: rgb;
  margin: 0px;
  padding: 0px;
  text-rendering: optimizeLegibility;
  min-width: 320px;
  background: white;

  color: rgb(55,53,54);
  font-size: 16px;

}
a {
  text-decoration: none;
  /* color: rgb(0,191,198); */
}
@media screen and (min-width: 1000px){
  .wrapper{
     width: 1000px;
  }
  .nav{
    max-width:1000px;
    margin:0 auto;
  }
}
@media screen and (max-width: 1000px){
  .nav{
     width: 100%;
  }
}
@media (max-width: 400px){
  .wrapper{
     width: 100%;
  }
  .nav{
     width: 100%;
  }
}
.page_wrapper {
  height: 100%;
}
.wrapper {

  margin-left: auto;
  margin-right: auto;

  box-sizing: border-box;
  position: relative;

  /* background: rgb(236,236,236);*/
}
#content {
	margin-top: 50px;
  padding-top: 10px;
  height: 100vh;
  overflow: scroll;
}
#content--cover {
  margin-top: 50px;
  min-height: 600px;
}
#content--proposal {
  width: 100%;
  height: 100vh;
  overflow: scroll;
}
#content--proposal.limit {
  height: 100vh;
  overflow: hidden;
}

hr {
  border: 0;
  height: 1px;
  background: rgb(220,220,220);
}
.highlight {
  font-weight: bold;
  text-decoration: underline;
}
.l_center {
  text-align: center;
}
@media screen and (max-width: 400px){
  ul{
    padding-left: 20px;
  }
  ol {
    padding-left: 22px;
  }
  li {
    margin-bottom: 6px;
    line-height: 1.4;
  }

}

/* ------------------------------------------------------------ */
/* Navigation
/* ------------------------------------------------------------ */

header {
  z-index: 100;
  height: 50px;
  width: 100%;
  position: fixed;
  top: 0px;
  box-sizing: border-box;

  background: rgb(220, 220, 220);
  text-align: center;

}
.nav_background {
  /* background: #3F51B5;  indigo */
  background: white;
  color: rgb(53,55,54);

}

/* ------------------------------------------------------------ */
/* List Item
/* ------------------------------------------------------------ */
.q_breadcrumbs {
  font-size: 16px;
  color: rgb(140,140,140);
  font-weight: 700;
  line-height: 18px;
  margin-top: 10px;
  margin-bottom: 5px;
}
.q_title{
  display: inline-block;
  width: 100%;
  text-align: left;
  font-size: 26px;
  font-weight: 700;
  height: auto;
  border-bottom: 1px solid rgb(220,220,220);

}
.q_item {
  box-shadow: 0 1px 2px rgba(0,0,0,.2);
  margin-bottom: 1px;

  -moz-transition: .2s;
  -ms-transition: .2s;
  -webkit-transition: .2s;
  transition: .2s;
  transition-duration: .5s;

  padding: 10px;
  width: 100%;
  position: relative;
  background: white;
}

.q_content {
  margin-top: 50px; /* for fixed nav */
  text-align: left;
  padding: 5px 10px;
  padding-bottom: 50px;

}
.q_content_reply {
  margin-bottom: 50vh;
}



/* ------------------------------------------------------------ */
/* Button
/* ------------------------------------------------------------ */
a.cancel {
  display: inline-block;
  min-width: 70px;
  font-size: 14px;
  text-decoration: underline;
  font-weight: 700;
  text-align: center;
  color: rgb(63,159,155);
  cursor: pointer;
}
a.button {
  font-weight: 700;
  -moz-transition: .2s;
  -ms-transition: .2s;
  -webkit-transition: .2s;
  transition: .2s;
  background: rgb(63,159,155);
  border-radius: 2px;
  box-shadow: 0 2px 2px rgba(0,0,0,.2);
  color: #fff;
  display: inline-block;
  font-size: 14px;
  text-decoration: none;
  text-transform: uppercase;
  padding: 7px 14px;
  cursor: pointer;
  min-width: 70px;
  text-align: center;
}
a.button--square {
  -moz-transition: .2s;
  -ms-transition: .2s;
  -webkit-transition: .2s;
  transition: .2s;
  background: #26A69A;
  border-radius: 2px;
  box-shadow: 0 2px 2px rgba(0,0,0,.2);
  color: #fff;
  display: inline-block;
  font-size: 13px;
  text-decoration: none;
  text-transform: uppercase;
  padding: 10px 10px;
  box-sizing: border-box;
  cursor: pointer;
  min-width: 40px;
  min-height: 40px;
  text-align: center;

}
a.button.unsign {
  /* background: #db4437; */
  min-width: 83px;
}
a.button.facebook{
  background: #0277BD;
}
a.button--square.inactive, a.button--wide.inactive{
  color: rgb(53,55,54);
  background: transparent;
  color: white;

}
a.button.goodrating{
  background: #8BC34A;
}
a.button--wide {
  border: 1px solid white;
  background: white;
  -moz-transition: .2s;
  -ms-transition: .2s;
  -webkit-transition: .2s;
  transition: .2s;
  color: rgb(53,55,54);
  display: inline-block;
  font-size: 13px;
  text-decoration: none;
  padding: 4px 10px;
  box-sizing: border-box;
  cursor: pointer;
  text-align: center;
  border-radius: 5px;
  margin-right: 6px;


}


/* ------------------------------------------------------------ */
/* sidebar
/* ------------------------------------------------------------ */

#sidebar-shadow {
  background: rgba(0,0,0,0.5);
  height: 100%;
  width: 100%;
  z-index: 400;
  overflow: hidden;
  position: absolute;
  top: 0px;
  left:0px;
}
#sidebar-container {
  z-index: 400;
  padding-right: 50px;
  box-sizing: border-box;
  height: 100%;

  top: 0px;
  left: -100%;
  overflow: scroll;
  position: absolute;
  text-align: center;

  -moz-transition: .2s;
  -ms-transition: .2s;
  -webkit-transition: .2s;
  transition: .2s;
  transition-duration: .5s;


}
.sidebar-container_left {
  background: rgb(53,55,54);
  height: 100%;
  overflow: scroll;
}
#sidebar-container.show{
  top: 0px;
  height: 100%;
  width: 100%;
  left: 0px;
  -moz-transition: .2s;
  -ms-transition: .2s;
  -webkit-transition: .2s;
  transition: .2s;
  transition-duration: .5s;

}
@media screen and (min-width: 600px){
  #sidebar-container {
    top: 50px;
    z-index: 30;
    box-shadow: 0 0 6px rgba(0,0,0,.16),0 6px 12px rgba(0,0,0,.32);
    padding-right: 0px;
  }
  #sidebar-container.show{
    width: 250px;
    top: 50px;
  }
  #sidebar-shadow {
    display: none;
  }
}
/* ... */

